# Robotics2

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  dsa  package.xml
PicassoBot/src/PicassoArm/: PicassoArm.cpp  PicassoArm.h
PicassoBot/src/PicassoEyes/: PicassoEyes.cpp  PicassoEyes.h
PicassoBot/src/PicassoUI/: PicassoUI.cpp  PicassoUI.h
config/: placeholder.txt  ur_servo.yaml  yolov8m-seg.onnx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/picasso_bot/lib/picasso_bot/: picasso_arm  picasso_eyes  picasso_ui
install/picasso_bot/share/ament_index/resource_index/package_run_dependencies/: picasso_bot
install/picasso_bot/share/ament_index/resource_index/parent_prefix_path/: picasso_bot
install/picasso_bot/share/picasso_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/picasso_bot/share/picasso_bot/cmake/: ament_cmake_export_dependencies-extras.cmake  picasso_botConfig-version.cmake  picasso_botConfig.cmake
install/picasso_bot/share/picasso_bot/config/: placeholder.txt
install/picasso_bot/share/picasso_bot/environment/: ament_prefix_path.dsv  path.dsv
install/picasso_bot/share/picasso_bot/launch/: picasso_arm_launch.py  picasso_eyes_test_1_launch.py
install/picasso_bot/share/picasso_bot/rviz/: config_test_picasso_arm.rviz  config_test_picasso_eyes.rviz
install/picasso_bot/share/picasso_bot/worlds/: picasso_eyes_test.world
launch/: picasso_arm_launch.py  picasso_arm_moveit_config.launch.py  picasso_arm_ur_control.launch.py  picasso_arm_ur_sim_control.launch.py  picasso_bot_launch.py  picasso_eyes_launch.py  picasso_ui_launch.py
rviz/: config_test_image_visualizer.rviz  config_test_picasso_arm.rviz  config_test_picasso_eyes.rviz
src/: main.cpp
src/common/: Contour.cpp  ServiceCommon.h
src/picasso_arm/: arm_main.cpp  picasso_arm.cpp  picasso_arm.h
src/picasso_eyes/: Contour.h  VisulisationSettings.cpp  VisulisationSettings.h  eyes_main.cpp  imageController.cpp  imageController.h  image_controller.cpp  image_controller.h  picasso_eyes.cpp  picasso_eyes.h  salesman_solver.cpp  salesman_solver.h  salseman_solver.cpp  salseman_solver.h  test_salesman_solver.cpp
src/picasso_eyes/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/picasso_eyes/log/: latest_build
src/picasso_ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  picasso_ui.cpp  picasso_ui.h  test.ui  ui_main.cpp  ui_mainwindow.h  ui_test.h
src/picasso_ui/build-testui-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  testui
src/picasso_ui/build-testui-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-8c546c890ebf9649421d.json  cmakeFiles-v1-51289e2c71261d42750a.json  codemodel-v2-f81c66294546a0e6ed5b.json  directory-.-Debug-20b9fa88561590275e44.json  index-2025-04-02T12-34-12-0455.json  target-testui-Debug-bacdba0997a454a89b4d.json  target-testui_autogen-Debug-7341ab3abcbafe02b6b3.json
src/picasso_ui/build-testui-Desktop-Debug/testui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/picasso_ui/build-testui-Desktop-Debug/testui_autogen/include/: ui_mainwindow.h
src/picasso_ui/build-testui-Desktop-MinSizeRel/: CMakeCache.txt
src/picasso_ui/build-testui-Desktop-Release/: CMakeCache.txt
src/picasso_ui/install/: local_setup.sh  setup.sh
src/picasso_ui/install/testui/share/testui/: package.bash  package.zsh
src/picasso_ui/log/: latest_build
src/picasso_ui/testui/: ## regenerate ui file  CMakeLists.txt  Note.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/picasso_ui/testui/install/: local_setup.sh  setup.sh
src/picasso_ui/testui/log/: latest_build
src/salesman_solver/: salesman_solver.cpp  salesman_solver.h
srv/: GetImage.srv  GetPoseArray.srv  GetSketch.srv  GetTotalLines.srv
tests/: test_salesman_solver.cpp
