<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picasso_bot</name>
  <version>0.0.0</version>
  <description>Robotics 2 project. Draw a portrait using a robot arm.</description>
  <maintainer email="joseph.a.tarbath@student.uts.edu.au">joseph</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- core -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- arm -->
  <depend>moveit_ros_planning_interface</depend>

  <!-- eyes -->
  <depend>ament_index_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>OpenCV</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>librealsense2</depend>
  <depend>realsense2_camera_msgs</depend>
 
  <!-- UI -->
  <depend>Qt5</depend>
  <depend>ros_image_to_qimage</depend>

  <!-- test -->
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-Multimedia</exec_depend>
  <exec_depend>libqt5-MultimediaWidgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
